paperless/paperless-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: paperless
  namespace: paperless
spec:
  type: LoadBalancer
  selector:
    app: paperless
  ports:
    - port: 8000
  externalIPs:
    - 192.168.191.221
